[package]
name = "cpp_to_rust"
version = "0.5.3"
authors = ["Pavel Strakhov <ri@idzaaus.org>"]
build = "build.rs"
description = "Automatic generator of C++ library wrappers"
license = "MIT"
repository = "https://github.com/rust-qt/cpp_to_rust"
exclude = ["scripts/**/*", "test_assets/**/*"]

[dependencies]

libc = "0.2"
regex = "0.1"

serde = "0.8"       # serialization
serde_json = "0.8"

clang = "0.14"    # C++ parsing
toml = "0.2"        # toml parsing
select = "0.3.0"    # html parsing
csv = "0.14.7"      # csv parsing

clap = "~2.10.0"    # command line args parsing
tempdir = "0.3.5"   # temporary directory creation
num_cpus = "1.0.0"  # detect preferred task count

ansi_term = "0.7"   # colored output
rustfmt = "0.6"     # Rust code formatting
error-chain = "0.5" # error handling
backtrace = "0.2.1" # error backtrace manipulation

clippy = {version = "0.0", optional = true} # linter

[build-dependencies]
serde_codegen = "0.8"

