[workspace]

members = [
    "ritual",
    "ritual_common",
    "ritual_build",
    "cpp_core",
    "qt_ritual",
    "qt_ritual_common",
    "qt_ritual_build",
    "qt_macros",
]

[patch.crates-io]
amq-proto = { git = "https://github.com/P0ntiuS/rust-amq-proto.git", branch = "error-chain" }

[profile.release]
debug = true
