[package]
name = "cpp_core"
edition = "2018"

# Don't forget to update `ritual/src/versions.rs`
# when changing this version.
version = "0.3.0"

authors = ["Pavel Strakhov <ri@idzaaus.org>"]
description = "Utilities for interoperability with C++"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-qt/ritual"

[dependencies]
libc = "0.2"
