[package]
name = "qt_macros"
version = "0.1.0-alpha.1"
authors = ["Pavel Strakhov <ri@idzaaus.org>"]
edition = "2018"
description = "Macros for Qt"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-qt/ritual"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

