[package]
name = "qt_ritual"
edition = "2018"
version = "0.2.0"
authors = ["Pavel Strakhov <ri@idzaaus.org>"]
license = "MIT"
description = "Generator of Rust-Qt crates"
repository = "https://github.com/rust-qt/cpp_to_rust/tree/master/qt_generator/qt_generator"

[dependencies]
ritual = { version = "0.2.0", path = "../ritual" }
qt_ritual_common = { version = "0.2.3", path = "../qt_ritual_common" }
ritual_common = { version = "0.2.3", path = "../ritual_common" }

clap = "2.32.0"    # command line args parsing
regex = "1.1.0"
rusqlite = "0.16.0"
compress = "0.1.2"
select = "0.4.2"   # html parsing
itertools = "0.8.0"
flexi_logger = "0.10.3"
log = "0.4.6"
