[package]
name = "qt_ritual_build"
edition = "2018"

# Don't forget to update `qt_ritual/src/versions.rs`
# when changing this version.
version = "0.0.0"

authors = ["Pavel Strakhov <ri@idzaaus.org>"]
license = "MIT"
description = "Build script implementation for Rust Qt crates"
repository = "https://github.com/rust-qt/cpp_to_rust/tree/master/qt_generator/qt_build_tools"

[dependencies]
ritual_build = { version = "0.0.0", path = "../ritual_build" }
qt_ritual_common = { version = "0.0.0", path = "../qt_ritual_common" }
