[package]
name = "qt_ritual_build"
edition = "2018"

# Don't forget to update `qt_ritual/src/versions.rs`
# when changing this version.
version = "0.2.0"

authors = ["Pavel Strakhov <ri@idzaaus.org>"]
license = "MIT OR Apache-2.0"
description = "Build script implementation for Rust Qt crates"
repository = "https://github.com/rust-qt/ritual"

[dependencies]
ritual_build = { version = "0.2.0", path = "../ritual_build" }
qt_ritual_common = { version = "0.2.0", path = "../qt_ritual_common" }
semver = "0.9.0"
itertools = "0.8.0"
