[package]
name = "qt_ritual_common"
edition = "2018"

version = "0.0.0"
authors = ["Pavel Strakhov <ri@idzaaus.org>"]
license = "MIT"
description = "Common utilities for generating and building Rust-Qt crates"
repository = "https://github.com/rust-qt/cpp_to_rust/tree/master/qt_generator/qt_generator_common"

[dependencies]
ritual_common = { version = "0.0.0", path = "../ritual_common" }
log = "0.4.6"
