[package]
name = "qt_ritual_common"
edition = "2018"

version = "0.4.0"
authors = ["Pavel Strakhov <ri@idzaaus.org>"]
license = "MIT OR Apache-2.0"
description = "Common utilities for generating and building Rust-Qt crates"
repository = "https://github.com/rust-qt/ritual"

[dependencies]
ritual_common = { version = "0.4.0", path = "../ritual_common" }
log = "0.4.6"
semver = "0.9.0"
