[package]
name = "ritual"
edition = "2018"
version = "0.0.0"
authors = ["Pavel Strakhov <ri@idzaaus.org>"]
description = "Automatic generator of C++ library wrappers"
license = "MIT"
repository = "https://github.com/rust-qt/cpp_to_rust"
exclude = ["test_assets/**/*"]

[dependencies]

ritual_common = { version = "0.0.0", path = "../ritual_common" }

regex = "1.1.0"
serde = "1.0.84"       # serialization
serde_derive = "1.0.84"
clang = "0.20.0"    # C++ parsing
select = "0.4.2"    # html parsing
tempdir = "0.3.7"   # temporary directory creation
derive_more = "0.13.0"
itertools = "0.8.0"
pathdiff = "0.1.0"
log = "0.4.6"

