[package]
name = "ritual"
edition = "2018"
version = "0.0.0"
authors = ["Pavel Strakhov <ri@idzaaus.org>"]
description = "Automatic generator of C++ library wrappers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-qt/ritual"
exclude = ["test_assets/**/*"]

[dependencies]

ritual_common = { version = "0.4.0", path = "../ritual_common" }

regex = "1.1.0"
serde = { version = "1.0.84", features = ["rc"] }
serde_derive = "1.0.84"
clang = "0.20.0"    # C++ parsing
select = "0.4.2"    # html parsing
tempdir = "0.3.7"   # temporary directory creation
derive_more = "0.13.0"
itertools = "0.8.0"
log = "0.4.6"
num_cpus = "1.9.0"
rayon = "1.0.3"
flexi_logger = "0.11.1"
structopt = "0.2.15"
chrono = "0.4.6"
amqp = "0.1.3"
serde_json = "1.0.39"
uuid = { version = "0.7.4", features = ["v4"] }
once_cell = "1.2.0"
reqwest = "0.9.0"
flate2 = "1.0.13"
tar = "0.4.26"
semver = "0.9.0"
