[package]
name = "ritual_build"
edition = "2018"

# Don't forget to update `ritual/src/versions.rs`
# when changing this version.
version = "0.0.0"
authors = ["Pavel Strakhov <ri@idzaaus.org>"]

description = "Build script implementation for C++ library wrappers"
repository = "https://github.com/rust-qt/cpp_to_rust/tree/master/cpp_to_rust/cpp_to_rust_build_tools"
license = "MIT"

[dependencies]

ritual_common = { version = "0.0.0", path = "../ritual_common" }

log = "0.4.6"
