[package]
name = "ritual_common"
edition = "2018"

# when changing version of this crate, change corresponding dependency version in
# `cpp_to_rust_generator`, `cpp_to_rust_build_tools` and `qt_generator_common`
version = "0.2.3"

authors = ["Pavel Strakhov <ri@idzaaus.org>"]
description = "Common utilities for cpp_to_rust_generator and cpp_to_rust_build_tools"
license = "MIT"
repository = "https://github.com/rust-qt/cpp_to_rust/tree/master/cpp_to_rust/cpp_to_rust_common"

[dependencies]
failure = "0.1.5" # error handling

regex = "1.1.0"

serde = "1.0.84"       # serialization
serde_derive = "1.0.84"
serde_json = "1.0.34"
bincode = "1.0.1"

term-painter = "0.2.4"   # colored output

num_cpus = "1.9.0"  # detect preferred task count

toml = "0.4.10" # toml generation and parsing
lazy_static = "1.2.0"
itertools = "0.8.0"
log = "0.4.6"

