[package]
name = "ritual_common"
edition = "2018"
version = "0.4.0"
authors = ["Pavel Strakhov <ri@idzaaus.org>"]
description = "Common utilities for ritual and ritual_build"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-qt/ritual"

[dependencies]
failure = "0.1.5" # error handling
regex = "1.1.0"
serde = "1.0.84"       # serialization
serde_derive = "1.0.84"
serde_json = "1.0.34"
bincode = "1.0.1"
term-painter = "0.2.4"   # colored output
num_cpus = "1.9.0"  # detect preferred task count
toml = "0.4.10" # toml generation and parsing
lazy_static = "1.2.0"
itertools = "0.8.0"
log = "0.4.6"
semver = "0.9.0"
pathdiff = "0.1.0"
shell-words = "0.1.0"
dunce = "1.0.0"
