[package]
name = "cpp_to_rust_common"
version = "0.0.1"
authors = ["Pavel Strakhov <ri@idzaaus.org>"]
build = "build.rs"
description = "Common utilities for cpp_to_rust_generator and cpp_to_rust_build_tools"
license = "MIT"

[dependencies]
error-chain = "0.5" # error handling
backtrace = "0.2.1" # error backtrace manipulation

regex = "0.1"

serde = "0.8"       # serialization
serde_json = "0.8"

term-painter = "0.2.3"   # colored output

num_cpus = "1.0.0"  # detect preferred task count

toml = "0.2" # toml generation and parsing

[build-dependencies]
serde_codegen = "0.8"
