[package]
name = "cpp_to_rust_common"

# when changing version of this crate, change corresponding dependency version in
# `cpp_to_rust_generator`, `cpp_to_rust_build_tools` and `qt_generator_common`
version = "0.2.0"

authors = ["Pavel Strakhov <ri@idzaaus.org>"]
description = "Common utilities for cpp_to_rust_generator and cpp_to_rust_build_tools"
license = "MIT"
repository = "https://github.com/rust-qt/cpp_to_rust/tree/master/cpp_to_rust/cpp_to_rust_common"

[dependencies]
error-chain = "0.5" # error handling
backtrace = "0.2.1" # error backtrace manipulation

regex = "0.1"

serde = "0.9"       # serialization
serde_derive = "0.9"
serde_json = "0.9"
bincode = "1.0.0-alpha6"

term-painter = "0.2.3"   # colored output

num_cpus = "1.0.0"  # detect preferred task count

toml = "0.2" # toml generation and parsing
lazy_static = "0.2"

[build-dependencies]
serde_codegen = "0.9"
