[package]
name = "cpp_to_rust_common"

# when changing version of this crate, change corresponding dependency version in
# `cpp_to_rust_generator`, `cpp_to_rust_build_tools` and `qt_generator_common`
version = "0.2.3"

authors = ["Pavel Strakhov <ri@idzaaus.org>"]
description = "Common utilities for cpp_to_rust_generator and cpp_to_rust_build_tools"
license = "MIT"
repository = "https://github.com/rust-qt/cpp_to_rust/tree/master/cpp_to_rust/cpp_to_rust_common"

[dependencies]
error-chain = "0.11" # error handling
backtrace = "0.3" # error backtrace manipulation

regex = "1.0"

serde = "1.0"       # serialization
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.0"

term-painter = "0.2.3"   # colored output

num_cpus = "1.0.0"  # detect preferred task count

toml = "0.2" # toml generation and parsing
lazy_static = "1.1"
