[package]
name = "cpp_to_rust_generator"
version = "0.2.0"
authors = ["Pavel Strakhov <ri@idzaaus.org>"]
description = "Automatic generator of C++ library wrappers"
license = "MIT"
repository = "https://github.com/rust-qt/cpp_to_rust"
exclude = ["test_assets/**/*"]

[dependencies]

regex = "0.1"

serde = "0.9"       # serialization
serde_derive = "0.9"

clang = "0.14"    # C++ parsing

select = "0.3.0"    # html parsing

tempdir = "0.3.5"   # temporary directory creation

rustfmt = "0.6"     # Rust code formatting

clippy = {version = "0.0", optional = true} # linter

cpp_to_rust_common = { version = "0.2.0", path = "../../cpp_to_rust/cpp_to_rust_common" }

