[package]
name = "qt_build_tools"
version = "0.1.3"
authors = ["Pavel Strakhov <ri@idzaaus.org>"]
license = "MIT"
description = "Build script implementation for Rust Qt crates"

[dependencies]
cpp_to_rust_build_tools = { version = "0.0", path = "../../cpp_to_rust/cpp_to_rust_build_tools" }
cpp_to_rust_common = { version = "0.0", path = "../../cpp_to_rust/cpp_to_rust_common" }
qt_generator_common = { version = "0.0", path = "../qt_generator_common" }
