[package]
name = "qt_build_tools"

# when changing this version, update `qt_generator/qt_generator/src/versions.rs`
version = "0.2.3"
authors = ["Pavel Strakhov <ri@idzaaus.org>"]
license = "MIT"
description = "Build script implementation for Rust Qt crates"
repository = "https://github.com/rust-qt/cpp_to_rust/tree/master/qt_generator/qt_build_tools"

[dependencies]
cpp_to_rust_build_tools = { version = "0.2.3", path = "../../cpp_to_rust/cpp_to_rust_build_tools" }
qt_generator_common = { version = "0.2.3", path = "../qt_generator_common" }
