[package]
name = "qt_generator"
version = "0.0.0"
authors = ["Pavel Strakhov <ri@idzaaus.org>"]
license = "MIT"
description = "Generator of Rust-Qt crates"
repository = "https://github.com/rust-qt/cpp_to_rust/tree/master/qt_generator/qt_generator"

[dependencies]
cpp_to_rust_generator = { version = "0.0", path = "../../cpp_to_rust/cpp_to_rust_generator" }
cpp_to_rust_common = { version = "0.0", path = "../../cpp_to_rust/cpp_to_rust_common" }
qt_generator_common = { version = "0.0", path = "../qt_generator_common" }

clap = "2.23.1"    # command line args parsing
regex = "0.1"
rusqlite = "0.7"
compress = "0.1.2"
select = "0.3.0"    # html parsing
