[package]
name = "qt_generator_common"

# when changing version of this crate, change corresponding dependency version in
# qt_build_tools and qt_generator
version = "0.2.3"
authors = ["Pavel Strakhov <ri@idzaaus.org>"]
license = "MIT"
description = "Common utilities for generating and building Rust-Qt crates"
repository = "https://github.com/rust-qt/cpp_to_rust/tree/master/qt_generator/qt_generator_common"

[dependencies]
cpp_to_rust_common = { version = "0.2.3", path = "../../cpp_to_rust/cpp_to_rust_common" }
